<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Registration"
    tools:showIn="@layout/activity_member_registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tvRegistrationMsg"
                style="@style/appDefaultTextView"
                android:layout_width="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/officer_register_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegistrationMsg2"
                style="@style/appDefaultTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Password must be greater than 6 characters. "
                android:textColor="#DD0808"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etGradeLayout" />

            <TextView
                android:id="@+id/tvErrorMsg"
                style="@style/appDefaultErrorTextView"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegistrationMsg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etFnameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorMsg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFname"
                    android:name="firstName"
                    style="@style/appDefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLnameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etFnameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLname"
                    android:name="lastName"
                    style="@style/appDefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etLnameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:name="email"
                    style="@style/appDefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etOrgLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGradeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etOrgLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGrade"
                    android:name="firstName"
                    style="@style/appDefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/grade"
                    android:inputType="number"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnCancel"
                style="@style/appCancelButton"
                android:layout_width="150dp"
                android:layout_marginLeft="8dp"
                android:background="#B2FF6F6F"
                android:clickable="true"
                android:onClick="onRegistrationCancel"
                android:text="Cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/appDefaultButton"
                android:layout_width="150dp"
                android:layout_marginRight="8dp"
                android:background="#FC6060"
                android:text="Register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvRegistrationMsg2"
                app:passwordToggleEnabled="true"
                tools:layout_editor_absoluteX="0dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:name="password"
                style="@style/appDefaultEditText"
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#90000033"
                app:layout_constraintBottom_toBottomOf="@+id/etPasswordLayout"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
